RD-98 Prevent unnecessary scrollbar from appearing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @include material.app-background();
 
 html {
-   overflow: hidden;
+   overflow: auto !important;
 }
 
 body {
